[package]
name = "fasternet_client"
version = "0.1.0"
authors = ["Tristan Hume <tris.hume@gmail.com>"]

[dependencies]
fasternet_common = {path="../fasternet_common"}
webrender = { git = "https://github.com/servo/webrender" }
# servo-glutin = "0.11"     # for the example apps
gleam = "0.4.8"
# glutin = "0.9.2"
app_units = "0.5.6"
glutin = { git = "https://github.com/tomaka/glutin" }

# [replace]
# 'glutin:0.9.2' = { path = "/Users/tristan/misc/glutin" }
# cloned from https://github.com/trishume/winit branch coroutines-2
# "winit:0.7.6" = { path = "../winit" }
